--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -4,76 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ventoray.popularmovies.MovieDetailsActivity"
-    android:background="@android:color/black">
+    android:background="@android:color/black"
+    tools:context="com.ventoray.popularmovies.MovieDetailsActivity">
 
-    <ScrollView
+
+    <TextView
+        android:id="@+id/tv_movie_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-smallcaps"
+        android:gravity="center"
+        android:padding="5dp"
+        android:textColor="@android:color/white"
+        android:textSize="24sp" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-smallcaps"
+        android:gravity="center"
+        android:padding="5dp"
+        android:textColor="@android:color/white"
+        android:id="@+id/tv_release_date"
+        android:layout_below="@id/tv_movie_title"/>
+
+
+    <ImageView
+        android:id="@+id/iv_movie_poster"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical">
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="24sp"
-                    android:padding="5dp"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:id="@+id/tv_movie_title"
-                    />
-
-
-
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/iv_movie_poster"
-                    android:layout_below="@+id/tv_movie_title"/>
-
-
-
-
-            </RelativeLayout>
-
-
-
-    </ScrollView>
+        android:layout_below="@+id/tv_release_date" />
 
 
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/gradient"
-        />
+        android:background="@drawable/gradient" />
 
     <RatingBar
+        android:id="@+id/ratingBar"
+        style="@style/Base.Widget.AppCompat.RatingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ratingBar"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:progressTint="@color/yellow"
-        style="@style/Base.Widget.AppCompat.RatingBar"/>
+        android:progressTint="@color/yellow" />
 
     <TextView
+        android:id="@+id/tv_synopsis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@android:color/white"
         android:layout_above="@id/ratingBar"
-        android:textSize="12sp"
-        android:padding="5dp"
         android:fontFamily="sans-serif"
-        android:id="@+id/tv_synopsis"
-        />
-
+        android:gravity="center"
+        android:padding="5dp"
+        android:textColor="@android:color/white"
+        android:textSize="12sp" />
 
 
 </RelativeLayout>
