Implemented ViewPager and Tablayout for videos and reviews section

--- a/app/src/main/res/layout-land/activity_movie_details.xml
+++ b/app/src/main/res/layout-land/activity_movie_details.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <include layout="@layout/details_info_and_poster"
-        android:layout_weight=".5"
-        android:layout_height="0dp"
-        android:layout_width="match_parent"
-        />
+    <include
+        layout="@layout/details_info_and_poster"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight=".5" />
 
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager_details"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight=".5">
 
         <android.support.design.widget.TabLayout
@@ -28,7 +29,3 @@
 
 
 </LinearLayout>
-
-
-
-
