--- a/app/src/main/res/layout/fragment_reviews_and_vidz.xml
+++ b/app/src/main/res/layout/fragment_reviews_and_vidz.xml
@@ -4,14 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.ventoray.popularmovies.ReviewsAndVidzFragment">
 
-    <TextView
-        android:id="@+id/tv_test"
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="28sp"
-        android:background="@color/yellow"
-        tools:text="Test text" />
+        android:id="@+id/recyclerview">
+
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
