--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="36dp">
 
-    <include layout="@layout/details_info_and_poster"
-        android:layout_weight=".5"
-        android:layout_height="0dp"
+    <include
+        layout="@layout/details_info_and_poster"
         android:layout_width="match_parent"
-        />
+        android:layout_height="0dp"
+        android:layout_weight=".5" />
 
 
     <android.support.v4.view.ViewPager
@@ -28,6 +35,8 @@
 
 
 </LinearLayout>
+
+
 
 
 
