--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -18,18 +18,28 @@
         android:layout_height="0dp"
         android:layout_weight=".5" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager_details"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".5">
+        android:layout_weight=".5"
+        >
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top" />
+            android:layout_gravity="top"
+            app:tabIndicatorColor="@android:color/white"
+            />
 
     </android.support.v4.view.ViewPager>
 
