MainActivity menu restructured to show posters of favorites too.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,8 +4,20 @@
 
     <item
         android:title="@string/rating"
-        android:id="@+id/action_switch"
-        app:showAsAction="always"
+        android:id="@+id/action_rating"
+        app:showAsAction="never"
         />
 
+    <item
+        android:title="@string/popular"
+        android:id="@+id/action_popular"
+        app:showAsAction="never"
+        />
+
+
+    <item
+        android:title="@string/favorites"
+        android:id="@+id/action_favorites"
+        app:showAsAction="never"
+        />
 </menu>
