--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#fff943</color>
 
+    <color name="white">#ffffff</color>
+
     <color name="yellow">#fff943</color>
 </resources>
